--- a/Khare_yml_02.yml
+++ b/Khare_yml_02.yml
@@ -16,3 +16,28 @@
   - [517, 359]
   - [486, 323]
   - [526, 323]
+- id: 3
+  points:
+  - [233, 286]
+  - [171, 287]
+  - [164, 254]
+  - [208, 248]
+
+- id: 4
+  points:
+  - [556, 314]
+  - [525, 317]
+  - [506, 287]
+  - [538, 283]
+- id: 5
+  points:
+  - [983, 421]
+  - [970, 460]
+  - [931, 456]
+  - [941, 421]
+- id: 6
+  points:
+  - [919, 339]
+  - [892, 345]
+  - [859, 314]
+  - [876, 313]
